# hora-site

./: .gitignore  README.md  build.sh
demos/: Cargo.toml  build.rs
demos/embed_service/: embed_service.py  embedding_pb2.py  embedding_pb2_grpc.py
demos/pb/: embedding.proto
demos/src/: main.rs
docs/: .gitignore  package.json
docs/docs/.vuepress/: config.js
docs/docs/.vuepress/nav/: en.js
docs/docs/.vuepress/theme/components/: Navbar.vue
docs/docs/doc/: BruteForceIndex.md  HNSWIndex.md  PQIVFIndex.md  PQIndex.md  README.md  SSGIndex.md  benchmark.md  example.md  install.md
home/: global.d.ts  package-lock.json  package.json  tsconfig.json
home/components/Bench/: index.tsx  style.module.scss
home/components/BigTitle/: index.tsx  style.module.scss
home/components/Demo/: index.tsx  style.module.scss
home/components/Demo/demos/: CelebMatch.tsx  WineSearch.tsx  celeb.style.module.scss  mocks.ts  utils.ts  wine.style.module.scss
home/components/Examples/: index.tsx  style.module.scss
home/components/Features/: index.tsx  style.module.scss
home/components/Footer/: index.tsx  style.module.scss
home/components/Installation/: index.tsx  style.module.scss
home/components/NavBar/: index.tsx  style.module.scss
home/components/SectionTitle/: index.tsx  style.module.scss
home/pages/: _app.tsx  _document.tsx  index.tsx
home/src/: App.tsx  index.tsx
home/src/components/NavBar/: index.tsx  style.module.scss
home/src/pages/Home/: index.tsx  style.module.scss
home/styles/: App.module.scss  globals.scss  home.module.scss  shared.scss
(+6 files in other folders)
