[package]
name = "demos"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
hora = { package = "hora", path = "../../hora", features=["simd"]}
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.15"
rand = "0.8.3"
serde_json = "1.0"